Quorum/Library/Tests/Templating/Pass/PassTextTakesText_7.quorum
class Main
    action Main
        Test<text> something
        something:doSomething("text")
    end
end