Quorum/Library/Tests/Templating/Fail/TypeCheckUntemplatedChildOfTempClass_11.quorum
class main
    action Main
        B b
        b:setSomething("wow!")
    end
end